# lcQtOPenGL

./: CMakeLists.txt
asset/: resource.qrc
asset/glsl/: fragmentShader.glsl  vertexShader.glsl
assets/: resource.qrc
assets/shaders/: fragmentShader.glsl  fragmentShader01.glsl  fragmentShader02.glsl  vertexShader.glsl  vertexShader02.glsl
src/: CMakeLists.txt  LCOpenGLWidget.cpp  LCOpenGLWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
src/Base/: lcTexture2D.cpp  lcTexture2D.h
src/Common/: CommonUtils.cpp  CommonUtils.h
src/Primitive/: Primitive.cpp  Primitive.h  Triangle.cpp  Triangle.h  TriangleQt.cpp  TriangleQt.h  Triangle_1.cpp  Triangle_1.h
